--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "astro": "^4.16.10",
     "better-sqlite3": "^11.5.0",
     "hono": "^4.6.9",
+    "sqlite3": "^5.1.7",
     "svelte": "^5.1.13",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/sqlite3": "^3.1.11"
   }
 }
