--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@astrojs/svelte": "^5.7.3",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.10",
-    "better-sqlite3": "^11.5.0",
     "hono": "^4.6.9",
+    "jose": "^5.9.6",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "svelte": "^5.1.13",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/sqlite3": "^3.1.11"
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
