--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/svelte": "^5.7.3",
     "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.10",
+    "astro": "4.5.6",
     "hono": "^4.6.9",
     "jose": "^5.9.6",
-    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "svelte": "^5.1.13",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.9.0"
   }
 }
